			SWI-Prolog ChangeLog
			====================

  * FIXED: GUI tracer to handle the dynamic code used for handling compound
    meta-calls.  Found by Holger Kanwischer.  Thanks.

  * FIXED: make pl-wam.c compile in `runtime mode'.  Lourens van der Meij,

VERSION 5.0.1
=============

  * PORT: Make sure all packages are compiled with plld and passed -fpic
    to fix building shared objects on some platforms.  Reported by
    Michael Piefel.
    
  * PORT: Updated config.sub and config.guess using SuSE 7.3 versions.

  * FIXED: configure message if libreadline is not found.

  * FIXED: Installing the manuals by Pixel <pixel@mandrakesoft.com>

  * UPDATED: web-locations in help and Windows console.

  * MODIFIED: is_list/1 now checks for a poper list.  proper_list/1 has
    been moved to library(backcomp).  Thanks to Richard O'Keefe for pointing
    out this non-standard behaviour.

  * FIXED: name-clash in plld.c on AIX (Victor Bancroft).

VERSION 5.0.0
=============

  * ADDED: menu to PLWIN.EXE (the windows normal executable).  These menus
    can be programmed from Prolog. 

  * FIXED: make/0 detection of directories to update when using MKINDEX.pl
    (reported by Holger Kanwischer).

  * ADDED: autoload(Bool) option to load_files/2 to allow external packages
    to use the verbose/silent loading of demand-loaded files.  Now used for
    the pce_autoload/2 declaration.

  * FIXED: random/3 in library(quintus).  Thanks to Peng Te.

  * FIXED: improved type-checking converting code-lists or character-lists
    to text.  The routine is now also faster, especially if the argument is
    not a valid codelist of character list.

  * MODIFIED: Renamed write_ln/1 into writeln/1 for better compatibility.
    Added write_ln/1 to library(backcomp), so existing code shouldn't be
    bothered.

  * FIXED: sub_atom(+,-,-,+,-): crash on backtracking.  Thanks to Anjo
    Anjewierden.

VERSION 4.1.0
=============
