@@ -85,6 +85,11 @@ pce_image_directory(Dir) :-
 				 access(read)
 			       ], DirPath)
 	),
-	get(class(image), class_variable, path, PathVar),
-	get(PathVar, value, Path),
-	send(PathVar, value, string('%s:%s', DirPath, Path)).
+	(   compiling,
+	    get(@display, open, @off)	% don't force the display
+					% when compiling
+	->  true
+	;   get(class(image), class_variable, path, PathVar),
+	    get(PathVar, value, Path),
+	    send(PathVar, value, string('%s:%s', DirPath, Path))
+	).
